# llm

./: .env copy  .gitignore  README.md  docker-compose.yml
.Containers/langchain/: Dockerfile
containers/langchain/: Dockerfile
llm-work/hf_models/: README.md  pyproject.toml
llm-work/hf_models/tests/: import_ok.py
llm-work/lc_tuto/: README.md  pyproject.toml
llm-work/speech2text/: pyproject.toml
llm-work/speech2text/tests/: import_ok.py
projects/: README.md
projects/llm/: pyproject.toml
projects/llm/llm/: demo.py
projects/llm/tests/: import_ok.py
