[tool.poetry]
name = "hf-models"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "^2.1.0"
tensorflow = "^2.14.0"
jax = "^0.4.18"
transformers = "^4.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
