[tool.poetry]
name = "lc-tuto"
version = "0.1.0"
description = "LLMのチュートリアル"
authors = ["ichiyama"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
langchain = "^0.0.310"
openai = "^0.28.1"
tiktoken = "^0.5.1"
numpy = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
